# eligibility-etl-airflow

./: .gitignore  Dockerfile  Dockerfile.final-diagnosis  README.md  airflow.db-journal  analysis.py  docker-compose.final-diagnosis.yaml  docker-compose.yaml  dockerfile  etl_analysis.csv  newjson.json  pyproject.toml  requirements.txt  setup.cfg  test.ipynb
Notebooks/: predicitions_analysis.ipynb  test_for_samy.ipynb
dags/: clinics_predictions_etl.py  clinics_predictions_etl_pipeline.py  clinics_resubmission_etl.py  clinics_resubmission_etl_pipeline.py  eligibilty_etl.py  eligibilty_etl_pipeline.py  eligibilty_etl_pipeline_midnight.py  final_diagnosis_etl_pipeline.py  predictions_EGY_etl.py  predictions_KSA_etl.py  predictions_etl_pipeline.py  resubmission_etl.py  resubmission_etl_pipeline.py  test_dag.py
sql/: claims_ahj.sql  claims_prediction.sql  clinical_sheets.sql  eligibility_dotcare.sql  final_diagnosis.sql  prediction_EGY.sql  predictions_KSA.sql  resubmission.sql  resubmission_update.sql  test.sql
src/: AHJ_Claims.py  Home.py  complaints.py  components.py  db.py  eligibility.py  eligibility_json_samples.py  eligibility_parser.py  eligibility_payload.json  eligibility_recovery.py  eligibility_response.json  etl_controls.py  etl_utils.py  export.py  filters.py  final_diagnosis.py  icd10_utils.py  lch_eligibility.py  llm_utils.py  predictions.py  predictions_EGY.py  predictions_fireworks.py  predictions_openrouter.py  refresh.py  resubmission.py  resubmission_engine.py  resubmission_recovery.py  run_predictions.py  test.py  test_db.py  test_llm_predictions.py  ui.py  utils.py
src/pages/: 1_Eligibility.py  2_Predictions.py  3_Resubmission.py
